feat: 유저 온보딩 reset시 취향저격 리스트 즉시 반영