@@ -4,13 +4,15 @@ import com.vinny.backend.User.domain.*;
 import com.vinny.backend.User.domain.enums.UserStatus;
 import com.vinny.backend.User.domain.mapping.*;
 import com.vinny.backend.User.dto.*;
+import com.vinny.backend.User.config.UserPreferenceChangedEvent;
 import com.vinny.backend.User.repository.*;
+import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,61 +23,66 @@ public class UserService {
     private final BrandRepository brandRepository;
     private final VintageItemRepository vintageItemRepository;
     private final RegionRepository regionRepository;
+    private final UserShopForYouService userShopForYouService;
+    private final EntityManager em;
+    private final ApplicationEventPublisher publisher;
 
     @Transactional
     public void completeOnboarding(Long userId, OnboardingRequestDto requestDto) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("온보딩 진행 중인 사용자를 찾을 수 없습니다."));
 
-        // 1. 닉네임 업데이트 및 상태를 'ACTIVE'로 변경
+        // 1. 닉네임/코멘트/상태
         user.updateNickname(requestDto.getNickname());
         user.updateComment(requestDto.getComment());
         user.changeStatus(UserStatus.ACTIVE);
 
-        // 2. VintageStyle 정보 저장
+        // 2. VintageStyle
         if (requestDto.getVintageStyleIds() != null && !requestDto.getVintageStyleIds().isEmpty()) {
             List<VintageStyle> vintageStyles = vintageStyleRepository.findAllById(requestDto.getVintageStyleIds());
             List<UserVintageStyle> userVintageStyles = vintageStyles.stream()
                     .map(style -> UserVintageStyle.builder().user(user).vintageStyle(style).build())
-                    .collect(Collectors.toList());
-            user.getUserVintageStyleList().clear(); // 기존 정보가 있다면 초기화
+                    .toList();
+            user.getUserVintageStyleList().clear();
             user.getUserVintageStyleList().addAll(userVintageStyles);
         }
 
-        // 3. Brand 정보 저장
+        // 3. Brand
         if (requestDto.getBrandIds() != null && !requestDto.getBrandIds().isEmpty()) {
             List<Brand> brands = brandRepository.findAllById(requestDto.getBrandIds());
             List<UserBrand> userBrands = brands.stream()
                     .map(brand -> UserBrand.builder().user(user).brand(brand).build())
-                    .collect(Collectors.toList());
+                    .toList();
             user.getUserBrandList().clear();
             user.getUserBrandList().addAll(userBrands);
         }
 
-        // 4. VintageItem 정보 저장 (위와 동일한 패턴)
+        // 4. VintageItem
         if (requestDto.getVintageItemIds() != null && !requestDto.getVintageItemIds().isEmpty()) {
             List<VintageItem> vintageItems = vintageItemRepository.findAllById(requestDto.getVintageItemIds());
             List<UserVintageItem> userVintageItems = vintageItems.stream()
                     .map(item -> UserVintageItem.builder().user(user).vintageItem(item).build())
-                    .collect(Collectors.toList());
+                    .toList();
             user.getUserVintageItemList().clear();
             user.getUserVintageItemList().addAll(userVintageItems);
         }
 
-        // 5. Region 정보 저장 (위와 동일한 패턴)
+        // 5. Region
         if (requestDto.getRegionIds() != null && !requestDto.getRegionIds().isEmpty()) {
             List<Region> regions = regionRepository.findAllById(requestDto.getRegionIds());
             List<UserRegion> userRegions = regions.stream()
                     .map(region -> UserRegion.builder().user(user).region(region).build())
-                    .collect(Collectors.toList());
+                    .toList();
             user.getUserRegionList().clear();
             user.getUserRegionList().addAll(userRegions);
         }
+
+        em.flush(); // 중요: 변경을 DB에 밀어넣음
+        publisher.publishEvent(new UserPreferenceChangedEvent(userId));
     }
 
     @Transactional
     public void resetVintageStyle(Long userId, UserVintageStyleRequestDto requestDto) {
-
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("취향 재설정 중인 사용자를 찾을 수 없습니다."));
 
@@ -83,15 +90,17 @@ public class UserService {
             List<VintageStyle> vintageStyles = vintageStyleRepository.findAllById(requestDto.getVintageStyleIds());
             List<UserVintageStyle> userVintageStyles = vintageStyles.stream()
                     .map(style -> UserVintageStyle.builder().user(user).vintageStyle(style).build())
-                    .collect(Collectors.toList());
-            user.getUserVintageStyleList().clear(); // 기존 정보가 있다면 초기화
+                    .toList();
+            user.getUserVintageStyleList().clear();
             user.getUserVintageStyleList().addAll(userVintageStyles);
         }
+
+        em.flush();
+        publisher.publishEvent(new UserPreferenceChangedEvent(userId));
     }
 
     @Transactional
     public void resetBrand(Long userId, UserBrandRequestDto requestDto) {
-
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("취향 재설정 중인 사용자를 찾을 수 없습니다."));
 
@@ -99,15 +108,17 @@ public class UserService {
             List<Brand> brands = brandRepository.findAllById(requestDto.getBrandIds());
             List<UserBrand> userBrands = brands.stream()
                     .map(brand -> UserBrand.builder().user(user).brand(brand).build())
-                    .collect(Collectors.toList());
+                    .toList();
             user.getUserBrandList().clear();
             user.getUserBrandList().addAll(userBrands);
         }
+
+        em.flush();
+        publisher.publishEvent(new UserPreferenceChangedEvent(userId));
     }
 
     @Transactional
     public void resetVintageItem(Long userId, UserVintageItemRequestDto requestDto) {
-
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("취향 재설정 중인 사용자를 찾을 수 없습니다."));
 
@@ -115,15 +126,17 @@ public class UserService {
             List<VintageItem> vintageItems = vintageItemRepository.findAllById(requestDto.getVintageItemIds());
             List<UserVintageItem> userVintageItems = vintageItems.stream()
                     .map(item -> UserVintageItem.builder().user(user).vintageItem(item).build())
-                    .collect(Collectors.toList());
+                    .toList();
             user.getUserVintageItemList().clear();
             user.getUserVintageItemList().addAll(userVintageItems);
         }
+
+        em.flush();
+        publisher.publishEvent(new UserPreferenceChangedEvent(userId));
     }
 
     @Transactional
     public void resetRegion(Long userId, UserRegionRequestDto requestDto) {
-
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("취향 재설정 중인 사용자를 찾을 수 없습니다."));
 
@@ -131,9 +144,14 @@ public class UserService {
             List<Region> regions = regionRepository.findAllById(requestDto.getRegionIds());
             List<UserRegion> userRegions = regions.stream()
                     .map(region -> UserRegion.builder().user(user).region(region).build())
-                    .collect(Collectors.toList());
+                    .toList();
             user.getUserRegionList().clear();
             user.getUserRegionList().addAll(userRegions);
         }
+
+
+        em.flush();
+        publisher.publishEvent(new UserPreferenceChangedEvent(userId));
+
     }
 }
